--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,9 +1,15 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://${DATABASE_ADDRESS}:3306/u466872816_ifwms?createDatabaseIfNotExist=true
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create-drop
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+##spring.datasource.url=jdbc:h2:mem:testdb
+##spring.datasource.username=sa
+##spring.datasource.password=
+
+##spring.h2.console.enabled=true
+##spring.h2.console.path=/h2-console
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
